--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,15 +1,16 @@
+
 @charset "utf-8";
+
 /* ==========================================================================
  * PROJETO
  * Created: YYYY/MM/DD
  * Version: 1.0
- * Author:  Designer: Nome // Front-end: Nome
- * Email:   Designer: nome@gmail.com // Front-end: nome@gmail.com
- * Website: Designer: www.nome.com // Front-end: www.nome.com
+ * Author:  Designer: Nome - nome@gmail.com - www.nome.com
+ *          Front-end: Nome - nome@gmail.com - www.nome.com
+ *          Back-end: Nome - nome@gmail.com - www.nome.com
  * Notes:   This website was heavily based on Paul Irish's
  *          HTML5 Boilerplate: http://html5boilerplate.com/
  * ========================================================================== */
-
 
  /*! HTML5 Boilerplate v4.3.0 | MIT License | http://h5bp.com/ */
 
