melhorando estrutura sass

--- a/assets/stylesheets/_sass/main.scss
+++ b/assets/stylesheets/_sass/main.scss
@@ -111,9 +111,19 @@
     Author's custom styles
     ========================================================================== */
 
+/* ==========================================================================
+   Bloco de comentário de seção
+   ========================================================================== */
 
+/* Bloco de comentário de sub-seção
+   ========================================================================== */
 
+/*
+ * Bloco de comentário de grupo
+ * Ideal para explicações em múltiplas linhas e documentação.
+ */
 
+/* Comentário básico */
 
 
 
