--- a/assets/stylesheets/resources/resolution.scss
+++ b/assets/stylesheets/resources/resolution.scss
@@ -1,1 +1,4 @@
-resolution.scss
+/* ==========================================================================
+* Notes:
+* ========================================================================== */
+
